--- a/assets/styles/style_travel.css
+++ b/assets/styles/style_travel.css
@@ -10,23 +10,77 @@
 body {
     background-color: rgb(0, 0, 0);
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .container {
+    padding: 5%;
     width: 100%;
-    height: 100vh;
     position: absolute;
-    left: 140px;
 }
 
-
-.container svg {
-    width: 100%;
-    height: 100vh;
+svg {
+    zoom: 130%;
+    width: 100vh;
+    height: 100%;
     fill: rgb(218, 218, 218);
 }
 
-.container svg path:hover {
+svg path:hover {
     cursor: pointer;
     fill: darkred;
+}
+
+.data-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.properties-of-country {
+    width: 50%;
+    height: 50%;
+    position: absolute;
+    display: grid;
+    grid-template-columns: repeat(3fr);
+    gap: 10px;
+}
+
+.rowbox {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.box {
+    width: 150px;
+    height: 100px;
+    background-color: grey;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    /* IMPORTANT */
+}
+
+#close {
+    color: red;
+    font-size: 30px;
+    position: absolute;
+    right: 5px;
+    top: 0;
+}
+
+#close:hover {
+    cursor: pointer;
+    color: white;
+    background-color: red;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
