--- a/assets/styles/style_travel.css
+++ b/assets/styles/style_travel.css
@@ -84,3 +84,16 @@ a {
     color: white;
     text-decoration: none;
 }
+
+.hidden {
+    display: none;
+}
+
+#flag {
+    width: 100%;
+    border-radius: 8px;
+}
+
+.visited {
+    fill: darkmagenta;
+}
